crates/keron-lang/tests/corpus/errors/check/union_eq_cross_union.keron
# Two distinct closed unions have disjoint variant spaces; comparing
# them can never be true and is rejected.
val never: Boolean = os_type() == os_arch()
